objects/CC_Response__c.object
<CustomObject>
    <fields>
        <fullName>AM_Email_Id__c</fullName>
        <label>AM Email Id</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Call_Back_Time__c</fullName>
        <description>NGCC Phase1:Preferred Call Back requested by Customer</description>
        <label>Call Back Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Call_Script_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>NGCC Phase1:  Flag to indicate if Call Script is completed</description>
        <label>Call Script Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Call_Script_Executed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>NGCC Phase1:Flag to show whether the response is associated to Call Script</description>
        <label>Call Script Executed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Call_Script__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>NGCC Phase1:Call Script Reference for the associated Call Script Q and A</description>
        <label>CC Call Script</label>
        <referenceTo>CC_Call_Script__c</referenceTo>
        <relationshipLabel>CC Responses</relationshipLabel>
        <relationshipName>CC_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Call_Status__c</fullName>
        <description>NGCC Phase1:Call Status of the response</description>
        <label>Call Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Call Completed</fullName>
                </value>
                <value>
                    <fullName>Call Back Later</fullName>
                </value>
                <value>
                    <fullName>Nuture</fullName>
                </value>
                <value>
                    <fullName>Invalid</fullName>
                </value>
                <value>
                    <fullName>Invalid Call Completed</fullName>
                </value>
                <value>
                    <fullName>PE Cancelled/Completed</fullName>
                </value>
                <value>
                    <fullName>Max Attempts Reached</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>NGCC Phase1:Campaign for which the response was created</description>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>CC Responses</relationshipLabel>
        <relationshipName>CC_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Reason__c</fullName>
        <label>Contact Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Disposition_Sub_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>New Project</fullName>
                </value>
                <value>
                    <fullName>Replace/Upgrade</fullName>
                </value>
                <value>
                    <fullName>Optimize</fullName>
                </value>
                <value>
                    <fullName>Owns Cisco Equipment</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Lead Follow up</fullName>
                </value>
                <value>
                    <fullName>Mis-routed into Sales</fullName>
                </value>
                <value>
                    <fullName>Existing Account</fullName>
                </value>
                <value>
                    <fullName>Other/Unknown</fullName>
                </value>
                <value>
                    <fullName>Nurture</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disposition_Sub_Type__c</fullName>
        <label>Sub-Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Contacted via Email</fullName>
                </value>
                <value>
                    <fullName>Contacted via Phone</fullName>
                </value>
                <value>
                    <fullName>Contacted via Email &amp; Phone</fullName>
                </value>
                <value>
                    <fullName>Has a Partner</fullName>
                </value>
                <value>
                    <fullName>E-commerce</fullName>
                </value>
                <value>
                    <fullName>Unknown-Other Reason Provided</fullName>
                </value>
                <value>
                    <fullName>Consultant did not disclose end user contact info</fullName>
                </value>
                <value>
                    <fullName>Before Convo</fullName>
                </value>
                <value>
                    <fullName>Provided General Product info</fullName>
                </value>
                <value>
                    <fullName>General Product info (Data sheets-Compatability Info-Part Numbers)</fullName>
                </value>
                <value>
                    <fullName>Residential Support</fullName>
                </value>
                <value>
                    <fullName>Duplicate Prospect</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>IT Outsource</fullName>
                </value>
                <value>
                    <fullName>No longer with Company</fullName>
                </value>
                <value>
                    <fullName>Not Fit Wrong Contact</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Sent to AM</fullName>
                </value>
                <value>
                    <fullName>Sent to BDR</fullName>
                </value>
                <value>
                    <fullName>Sent to LDR</fullName>
                </value>
                <value>
                    <fullName>Sent to Partner</fullName>
                </value>
                <value>
                    <fullName>Sent to VSS</fullName>
                </value>
                <value>
                    <fullName>Long Billing Cycle</fullName>
                </value>
                <value>
                    <fullName>Not in purchasing cycle (Evaluating Vendor-Solution)</fullName>
                </value>
                <value>
                    <fullName>Project Not yet Initiated-Requested Follow Up Info</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>GVE-Partner Support</fullName>
                </value>
                <value>
                    <fullName>Licensing (TAC)</fullName>
                </value>
                <value>
                    <fullName>Order &amp; Billing</fullName>
                </value>
                <value>
                    <fullName>Other Cisco Dept</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Source_Contact_Id__c</fullName>
        <description>NGCC Phase1:Source of the prospect for which response is stored</description>
        <externalId>true</externalId>
        <label>External Source Contact Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inbound_Note__c</fullName>
        <label>Inbound Note</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Complaint</fullName>
                </value>
                <value>
                    <fullName>Customer Dropped Off</fullName>
                </value>
                <value>
                    <fullName>Customer Followed Up</fullName>
                </value>
                <value>
                    <fullName>Customer made bad call</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>System Integrator</fullName>
                </value>
                <value>
                    <fullName>Technical Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Key_Code__c</fullName>
        <description>NGCC Phase1:Program Event Code of the Program even associated to prospect</description>
        <label>Keycode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>NGCC Phase1:Language used to create the response</description>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Danish: da</fullName>
                </value>
                <value>
                    <fullName>Dutch: nl_NL</fullName>
                </value>
                <value>
                    <fullName>English: en_US</fullName>
                    <default>true</default>
                    <label>English: en_US</label>
                </value>
                <value>
                    <fullName>Finnish: fi</fullName>
                </value>
                <value>
                    <fullName>French: fr</fullName>
                </value>
                <value>
                    <fullName>German: de</fullName>
                </value>
                <value>
                    <fullName>Italian: it</fullName>
                </value>
                <value>
                    <fullName>Japanese: ja</fullName>
                </value>
                <value>
                    <fullName>Korean: ko</fullName>
                </value>
                <value>
                    <fullName>Portuguese (Brazil): pt_BR</fullName>
                </value>
                <value>
                    <fullName>Russian: ru</fullName>
                </value>
                <value>
                    <fullName>Spanish: es</fullName>
                </value>
                <value>
                    <fullName>Swedish: sv</fullName>
                </value>
                <value>
                    <fullName>Thai: th</fullName>
                </value>
                <value>
                    <fullName>Arabic: ar</fullName>
                </value>
                <value>
                    <fullName>Czech: cs</fullName>
                </value>
                <value>
                    <fullName>Greek: el</fullName>
                </value>
                <value>
                    <fullName>Hungarian: hu</fullName>
                </value>
                <value>
                    <fullName>Polish: pl</fullName>
                </value>
                <value>
                    <fullName>Turkish: tr</fullName>
                </value>
                <value>
                    <fullName>Vietnamese: vi</fullName>
                </value>
                <value>
                    <fullName>Chinese (Simplified): zh_CN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Admin_Email__c</fullName>
        <label>Lead Admin Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Lead_Description__c</fullName>
        <description>NGCC Phase1:New Lead Description captured during the call script</description>
        <label>Lead Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>NGCC Phase1:Lead/Prospect assocaited to response</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>CC Responses</relationshipLabel>
        <relationshipName>CC_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MODS_Contact__c</fullName>
        <description>NGCC Phase1:MODS Contact Id for the associated Response and Prospect</description>
        <externalId>true</externalId>
        <label>MODS Contact</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Question__c</fullName>
        <description>NGCC Phase1:Number of questions the Response was created</description>
        <label>No. of Question</label>
        <summaryForeignKey>CC_Response_Detail__c.Response_Id__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>NGCC Phase1:Agent notes provided by Agent while saving the response</description>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Contact_Email_Id__c</fullName>
        <label>Partner Contact Email Id</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Persona__c</fullName>
        <label>Persona</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Disposition_Sub_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Customer/End User</fullName>
                </value>
                <value>
                    <fullName>Consultant/Contractor</fullName>
                </value>
                <value>
                    <fullName>Other/Unknown</fullName>
                </value>
                <value>
                    <fullName>Cisco Partner</fullName>
                </value>
                <value>
                    <fullName>Cisco Agent (Other Dept.)</fullName>
                </value>
                <value>
                    <fullName>Home User</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Reseller</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Response_Date_Time__c</fullName>
        <description>NGCC Phase1:Response date and time when the response was created</description>
        <label>Response Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Response_Type__c</fullName>
        <description>NGCC Phase1:Response type when the response was created</description>
        <label>Response Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inbound Call</fullName>
                </value>
                <value>
                    <fullName>Outbound Call</fullName>
                </value>
                <value>
                    <fullName>Inbound Chat</fullName>
                </value>
                <value>
                    <fullName>Web Inquiry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_Event_Number__c</fullName>
        <description>NGCC Phase1:Source Event Number assocaite to the response default is SFDC ID</description>
        <label>Source Event Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_System_Name__c</fullName>
        <defaultValue>"NGCC"</defaultValue>
        <description>NGCC Phase1:Source system Name assocaite to the response default is NGCC</description>
        <label>Source System Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date_Time__c</fullName>
        <description>NGCC Phase1:Response Start Date</description>
        <label>Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>NGCC Phase1:Disposition status of the call/response</description>
        <label>Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Call Back</fullName>
                </value>
                <value>
                    <fullName>Max Attempts Reached</fullName>
                </value>
                <value>
                    <fullName>Cust Prefers a different buying method</fullName>
                </value>
                <value>
                    <fullName>Customer Dropped Off</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Invalid Info</fullName>
                </value>
                <value>
                    <fullName>Lead Escalation</fullName>
                </value>
                <value>
                    <fullName>Nurture</fullName>
                </value>
                <value>
                    <fullName>Qualified Lead</fullName>
                </value>
                <value>
                    <fullName>Transfer out</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>NGCC Phase-1: Each customer response will be captured in CC Response object and this defines response detail including the customer disposition values.</description>
    <label>CC Response</label>
    <nameField>
        <label>CC Response Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <validationRules>
        <fullName>NGCC_Validate_Call_Back_Date</fullName>
        <active>true</active>
        <errorConditionFormula>IF(!Call_Script_Executed__c,IF(ISPICKVAL(Status__c,'Call Back'),
OR(ISNULL(Call_Back_Time__c),Call_Back_Time__c &lt; Now()),false),false)</errorConditionFormula>
        <errorMessage>Call Back Time must be  future date/time.</errorMessage>
    </validationRules>
</CustomObject>